--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "project-template",
   "version": "1.0.0",
   "description": "",
+  "author": "Ziwei Liu",
+  "keywords": [],
+  "license": "ISC",
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html --open",
@@ -16,9 +19,10 @@
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --collect-coverage"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@storybook/addon-actions": "^5.3.18",
@@ -27,6 +31,8 @@
     "@storybook/preset-scss": "^1.0.2",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.18",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -51,9 +57,5 @@
     "style-loader": "^1.1.4",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
   }
 }
