Add env file to template

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env (Needed for template but not anything else)
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
