--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "parcel src/index.html --open",
     "demo": "start-storybook -p 6006",
     "prebuild": "run-s clean lint",
-    "build": "parcel build src/index.html --no-source-maps",
+    "build": "parcel build src/index.html --no-source-maps --public-url ./",
+    "deploy": "cd dist && git add --all && git commit -m \"Release at $(date)\" && git push",
     "build-storybook": "build-storybook",
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./dist/src.*",
     "lint": "run-s lint:code",
     "lint:code": "eslint --ext ts,tsx src",
     "test": "jest",
