--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
